@@ -98,7 +98,11 @@ Columns can contain style definition to set the style of all the cells on these 
 
 h4(#column_tools). Column Tools
 
-Column can currently only define a _Label edit_ tool, which will apply to all the cells of the column. It works like all edit The _Edit Mask_ element (contained inside the tool) is used to parse the new label's value as entered by the user, and to select part of this label as input variables to the editing action's body. The mask can contain substrings of the form @{N}@ where _N_ is a number. The parts of the new label's value which correspond to these substring will be available as variables named <code>argN</code>. For example, with an edit mask of <code>{0}:{1}</code> and an input string entered by the user of <code>attr : EString</code>, the tool's body would be executed with variables <code>arg0</code> set to <code>attr&#9251;</code> and <code>arg1</code> set to <code>&#9251;EString</code>.
+Column can currently define two tools:
+* A _Label edit_ tool, which will apply to all the cells of the column. It works like all edit The _Edit Mask_ element (contained inside the tool) is used to parse the new label's value as entered by the user, and to select part of this label as input variables to the editing action's body. The mask can contain substrings of the form @{N}@ where _N_ is a number. The parts of the new label's value which correspond to these substring will be available as variables named <code>argN</code>. For example, with an edit mask of <code>{0}:{1}</code> and an input string entered by the user of <code>attr : EString</code>, the tool's body would be executed with variables <code>arg0</code> set to <code>attr&#9251;</code> and <code>arg1</code> set to <code>&#9251;EString</code>.
+* A _Cell editor_ tool, which will also apply to all the cells of the column. The use of a _Cell editor_ tool requires to set its _qualified name_ with a Java class which must implement @org.eclipse.sirius.table.ui.tools.api.editor.ITableCellEditorFactory@ and its method @ITableCellEditorFactory.getCellEditor(Tree, Map<String, Object>)@. The _Map<String, Object>_ parameter allows access to the different variables of the _CellEditor_ tool: _element_, _table_, _line_, _lineSemantic_, _root_. The parameter _cellEditorResult_ is set with the result contained in the _CellEditor_ returned by @ITableCellEditorFactory.getCellEditor(Tree, Map<String, Object>)@. As indicated by the @org.eclipse.jface.viewers.CellEditor@ documentation, it is possible to implement _TextCellEditor_, _ColorCellEditor_, _ComboBoxCellEditor_, _CheckboxCellEditor_, _DialogCellEditor_. If no implementation is provided or an invalid _CellEditor_ is returned, a default CellEditor is built in @org.eclipse.sirius.table.ui.tools.internal.editor.provider.DFeatureColumnEditingSupport.getBestCellEditor(EObject, boolean)@. You can refer to Sirius "source code":https://git.eclipse.org/c/sirius/org.eclipse.sirius.git/tree/plugins/org.eclipse.sirius.table.ui/src/org/eclipse/sirius/table/ui/tools/internal/editor/provider/DFeatureColumnEditingSupport.java#n317 as sample, or use "one of our tests":https://git.eclipse.org/c/sirius/org.eclipse.sirius.git/tree/plugins/org.eclipse.sirius.tests.swtbot/src/org/eclipse/sirius/tests/swtbot/table/celleditorfactory/BooleanCellEditorFactory.java#n45 to implement your own "CellEditorFactory".
+
+It is possible to define both a _Label edit_ tool and a _Cell editor_ tool for a column mapping. In this case, the _Cell editor_ tool has priority. This kind of configuration is useless. Indeed, in this case the _Label edit_ tool is never used.
 
 h2(#cross_tables). Cross Tables
 
